--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,13 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-      <div id="view" data-ng-view=""></div>
+      <header>
+        <a href="#/prices"><div><p>PRISER</p></div></a>
+        <a href="#/"><div><p>LYS OG SALT<br>2015</p></div></a>
+        <a href="#/signup"><div><p>PÅMELDING</p></div></a>
+      </header>
+      <div id="view" data-ng-view="" class="fx-fade-normal fx-speed-1500"></div>
+      <footer><p>HEDMARKTOPPEN<br>14.-19. JULI</p></footer>
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
@@ -48,13 +54,13 @@
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-timer/dist/angular-timer.js"></script>
+    <script src="bower_components/ngFx/dist/ngFx.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/about.js"></script>
         <!-- endbuild -->
 </body>
 </html>
