--- a/app/index.html
+++ b/app/index.html
@@ -22,9 +22,9 @@
 
     <!-- Add your site or application content here -->
       <header>
-        <a href="#/prices"><div><p>PRISER</p></div></a>
-        <a href="#/"><div><p>LYS OG SALT<br>2015</p></div></a>
-        <a href="#/signup"><div><p>PÅMELDING</p></div></a>
+        <a href="#/prices"><div><h6>PRISER</h6></div></a>
+        <a href="#/"><div><h6>LYS OG SALT<br>2015</h6></div></a>
+        <a href="#/signup"><div><h6>PÅMELDING</h6></div></a>
       </header>
       <div id="view" data-ng-view="" class="fx-fade-normal fx-speed-1500"></div>
       <footer><p>HEDMARKTOPPEN<br>14.-19. JULI</p></footer>
