--- a/app/index.html
+++ b/app/index.html
@@ -22,12 +22,12 @@
 
     <!-- Add your site or application content here -->
       <header>
-        <a href="#/prices"><div><h6>PRISER</h6></div></a>
-        <a href="#/"><div><h6>LYS OG SALT<br>2015</h6></div></a>
-        <a href="#/signup"><div><h6>PÅMELDING</h6></div></a>
+        <div><a href="#/"><h6>LYS OG SALT<br>2015</h6></a></div>
+        <div><a href="#/prices"><h6>PRISER</h6></a></div>
+        <div><a href="#/signup"><h6>PÅMELDING</h6></a></div>
       </header>
-      <div id="view" data-ng-view="" class="fx-fade-normal fx-speed-1500"></div>
-      <footer><p>HEDMARKTOPPEN<br>14.-19. JULI</p></footer>
+      <div id="view" data-ng-view="" class="fx-fade-up-big fx-speed-2000"></div>
+      <footer data-ng-controller="FooterCtrl as footer" class="{{footer.color}} fx-fade-up-big fx-speed-2000"><p>HEDMARKTOPPEN<br>14.-19. JULI</p></footer>
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
@@ -60,7 +60,7 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/footer.js"></script>
         <!-- endbuild -->
 </body>
 </html>
