--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
     <!-- Add your site or application content here -->
       <header>
         <div><a href="#/"><h6>LYS OG SALT<br>2015</h6></a></div>
-        <div><a href="#/prices"><h6>PRISER</h6></a></div>
+        <div><a href="#/prices"><h6>INFO</h6></a></div>
         <div><a href="#/signup"><h6>PÅMELDING</h6></a></div>
       </header>
       <div id="view" data-ng-view="" class="fx-fade-up-big fx-speed-2000"></div>
