fixed crazy transition

--- a/app/index.html
+++ b/app/index.html
@@ -26,8 +26,8 @@
         <div><a href="#/prices"><h6>PRISER</h6></a></div>
         <div><a href="#/signup"><h6>PÅMELDING</h6></a></div>
       </header>
-      <div id="view" data-ng-view="" class="fx-fade-up-big fx-speed-2000"></div>
-      <footer data-ng-controller="FooterCtrl as footer" class="{{footer.color}} fx-fade-up-big fx-speed-2000"><p>HEDMARKTOPPEN<br>14.-19. JULI</p></footer>
+      <div id="view" data-ng-view="" class="fx-fade-up fx-speed-2000"></div>
+      <footer data-ng-controller="FooterCtrl as footer" class="{{footer.color}} fx-fade-up fx-speed-5000"><h6>HEDMARKTOPPEN<br>14.-19. JULI</h6></footer>
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
