Last commit from ekrem (except the actual link...)

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>Lys & Salt 2015</title>
+    <title>Lys OG Salt 2015</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -23,7 +23,7 @@
     <!-- Add your site or application content here -->
       <header>
         <div><a href="#/"><h6>LYS OG SALT<br>2015</h6></a></div>
-        <div><a href="#/prices"><h6>PRISER</h6></a></div>
+        <div><a href="#/prices"><h6>PRISER OG INFO</h6></a></div>
         <div><a href="#/signup"><h6>PÅMELDING</h6></a></div>
       </header>
       <div id="view" data-ng-view="" class="fx-fade-up fx-speed-2000"></div>
