--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>Lys OG Salt 2015</title>
+    <title>LYS OG SALT 2015</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -23,7 +23,7 @@
     <!-- Add your site or application content here -->
       <header>
         <div><a href="#/"><h6>LYS OG SALT<br>2015</h6></a></div>
-        <div><a href="#/prices"><h6>PRISER OG INFO</h6></a></div>
+        <div><a href="#/prices"><h6>PROGRAM</h6></a></div>
         <div><a href="#/signup"><h6>PÅMELDING</h6></a></div>
       </header>
       <div id="view" data-ng-view="" class="fx-fade-up fx-speed-2000"></div>
@@ -54,6 +54,7 @@
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-timer/dist/angular-timer.js"></script>
+    <script src="bower_components/gsap/src/uncompressed/TweenMax.js"></script>
     <script src="bower_components/ngFx/dist/ngFx.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
